--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-    <header class="hero-section">
-        <div class="hero-content">
+    <header class="content-section section-dark hero-section-solid">
+        <div class="container hero-content">
             <h1 data-aos="fade-up" data-aos-duration="1500" data-aos-offset="50">Emergenza Climatica</h1>
             <p data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400">Una prospettiva chiara sulla più grande sfida del nostro tempo.</p>
             <a href="#trend" class="cta-button" data-aos="zoom-in" data-aos-delay="800">Esplora l'Analisi</a>
@@ -63,7 +63,7 @@
         </div>
     </section>
 
-    <section id="impatto-ghiaccio" class="parallax-section image-impact-1">
+    <section id="impatto-ghiaccio" class="content-section section-accent-dark">
         <div class="container">
             <h2 data-aos="fade-in" data-aos-duration="2000" data-aos-offset="100">I Poli In Fiamme</h2>
             <p data-aos="fade-in" data-aos-duration="2000" data-aos-delay="500">Un ecosistema delicato che si sta dissolvendo davanti ai nostri occhi.</p>
@@ -78,17 +78,14 @@
                     <p>L'alterazione del ciclo dell'acqua porta a eventi estremi: **siccità prolungate** che prosciugano i campi e fiumi, e **alluvioni devastanti** causate da piogge improvvise e intense.</p>
                     <p>La **desertificazione** avanza, trasformando terre fertili in aree aride non più adatte all'agricoltura, minacciando la sicurezza alimentare e provocando migrazioni climatiche.</p>
                 </div>
-                <div class="image-box" data-aos="zoom-in" data-aos-delay="600">
-                    
-
-[Image of Drought cracked earth]
-
+                <div class="image-box-solid" data-aos="zoom-in" data-aos-delay="600">
+                    [Placeholder visual area]
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="impatto-mare" class="parallax-section image-impact-2">
+    <section id="impatto-mare" class="content-section section-accent-dark">
         <div class="container">
             <h2 data-aos="fade-up" data-aos-duration="2000" data-aos-offset="100">Gli Oceani Soffocano</h2>
             <p data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">L'acidificazione e il riscaldamento stanno distruggendo la vita marina e i suoi ecosistemi.</p>
