--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <p class="subtitle" data-aos="fade-right" data-aos-delay="400">Dati cruciali che illustrano l'entità del cambiamento.</p>
 
             <div class="data-grid">
-                <div class="data-item" data-aos="fade-up" data-aos-delay="200" data-aos-easing="ease-out-quad">
+                <div class="data-item" data-aos="fade-up" data-aos-delay="200" data-aos-easing="cubic-bezier(0.2, 0.8, 0.2, 1)">
                     <span class="data-value">+1.1°C</span>
                     <p class="data-label">Aumento medio della temperatura globale dal 1880 a oggi. *(Fonte: NASA)*</p>
                 </div>
-                <div class="data-item" data-aos="fade-up" data-aos-delay="400" data-aos-easing="ease-out-quad">
+                <div class="data-item" data-aos="fade-up" data-aos-delay="400" data-aos-easing="cubic-bezier(0.2, 0.8, 0.2, 1)">
                     <span class="data-value">420 ppm</span>
                     <p class="data-label">Concentrazione attuale di CO₂ nell'atmosfera, il massimo in 800.000 anni. *(Fonte: NOAA)*</p>
                 </div>
-                <div class="data-item" data-aos="fade-up" data-aos-delay="600" data-aos-easing="ease-out-quad">
+                <div class="data-item" data-aos="fade-up" data-aos-delay="600" data-aos-easing="cubic-bezier(0.2, 0.8, 0.2, 1)">
                     <span class="data-value">7 mm/anno</span>
                     <p class="data-label">Tasso di innalzamento del livello del mare, accelerato negli ultimi decenni. *(Fonte: ESA)*</p>
                 </div>
@@ -47,15 +47,15 @@
             <p class="subtitle" data-aos="fade-left" data-aos-delay="400">Le attività umane che guidano il riscaldamento globale.</p>
             
             <div class="cause-grid">
-                <div class="cause-item" data-aos="slide-up" data-aos-delay="200" data-aos-easing="ease-out-cubic">
+                <div class="cause-item" data-aos="slide-up" data-aos-delay="200" data-aos-easing="cubic-bezier(0.2, 0.8, 0.2, 1)">
                     <h3>01. Energia Fossile</h3>
                     <p>La combustione di carbone, petrolio e gas per produrre energia, riscaldare e guidare. Principale fonte di CO₂.</p>
                 </div>
-                <div class="cause-item" data-aos="slide-up" data-aos-delay="400" data-aos-easing="ease-out-cubic">
+                <div class="cause-item" data-aos="slide-up" data-aos-delay="400" data-aos-easing="cubic-bezier(0.2, 0.8, 0.2, 1)">
                     <h3>02. Deforestazione</h3>
                     <p>L'abbattimento delle foreste tropicali e boreali, riducendo l'assorbimento di CO₂ e rilasciando carbonio stoccato.</p>
                 </div>
-                <div class="cause-item" data-aos="slide-up" data-aos-delay="600" data-aos-easing="ease-out-cubic">
+                <div class="cause-item" data-aos="slide-up" data-aos-delay="600" data-aos-easing="cubic-bezier(0.2, 0.8, 0.2, 1)">
                     <h3>03. Agricoltura</h3>
                     <p>L'allevamento intensivo e l'uso di fertilizzanti chimici, che rilasciano metano e protossido d'azoto (gas serra potenti).</p>
                 </div>
@@ -79,8 +79,7 @@
                     <p>La **desertificazione** avanza, trasformando terre fertili in aree aride non più adatte all'agricoltura, minacciando la sicurezza alimentare e provocando migrazioni climatiche.</p>
                 </div>
                 <div class="image-box-solid" data-aos="zoom-in" data-aos-delay="600">
-                    [Placeholder visual area]
-                </div>
+                    </div>
             </div>
         </div>
     </section>
@@ -98,15 +97,15 @@
             <p class="subtitle" data-aos="fade-right" data-aos-delay="400">Azioni concrete per un futuro sostenibile e una transizione ecologica.</p>
 
             <div class="solution-grid">
-                <div class="solution-item" data-aos="slide-up" data-aos-delay="200" data-aos-easing="ease-out-cubic">
+                <div class="solution-item" data-aos="slide-up" data-aos-delay="200" data-aos-easing="cubic-bezier(0.2, 0.8, 0.2, 1)">
                     <h3>01. Energia Pulita</h3>
                     <p>Investire massivamente in solare, eolico e geotermico per azzerare le emissioni.</p>
                 </div>
-                <div class="solution-item" data-aos="slide-up" data-aos-delay="400" data-aos-easing="ease-out-cubic">
+                <div class="solution-item" data-aos="slide-up" data-aos-delay="400" data-aos-easing="cubic-bezier(0.2, 0.8, 0.2, 1)">
                     <h3>02. Economia Circolare</h3>
                     <p>Ridurre gli sprechi, riciclare, riutilizzare, promuovere prodotti durevoli e riparabili.</p>
                 </div>
-                <div class="solution-item" data-aos="slide-up" data-aos-delay="600" data-aos-easing="ease-out-cubic">
+                <div class="solution-item" data-aos="slide-up" data-aos-delay="600" data-aos-easing="cubic-bezier(0.2, 0.8, 0.2, 1)">
                     <h3>03. Mobilità Sostenibile</h3>
                     <p>Incentivare i trasporti pubblici elettrici, biciclette e veicoli a zero emissioni.</p>
                 </div>
@@ -120,6 +119,7 @@
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+        // Animazioni fluide e di lusso
         AOS.init({
             once: true,
             duration: 1200, 
